--- a/HTML/assets/less/modules/misc.less
+++ b/HTML/assets/less/modules/misc.less
@@ -511,7 +511,7 @@ span {
     border-color: rgba(0, 0, 0, 0.4);
 }
 .b-grey {
-    border-color: #e5e9ec;
+    border-color: darken(@preview-grey, 10%);
 }
 .visible-xlg {
     display: none;
