--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -1,15 +1,29 @@
+{{#isTeacherQuestion}}
+<h3 class="m-t-0">Create a <span class="semi-bold">Teacher</span> Question<br>
+<small>Create questions for training module to be taken during the class</small></h3>
+{{/isTeacherQuestion}}
+
+{{#isContentPiece}}
+<h3 class="m-t-0">Create <span class="semi-bold">Content</span><br>
+<small>Create content for training modules. This will not have any student interaction like teacher question</small></h3>
+{{/isContentPiece}}
+
 {{#isStudentQuestion}}
+<h3 class="m-t-0">Create a <span class="semi-bold">Student</span> Question<br>
+<small>Create questions for quizzes to be taken by the students</small></h3>
 <ul class="nav nav-tabs" id="subProps">
     <li class="active" id="settings-tab"><a class="tabs" href="#settings-tab-pane">Settings</a></li>
     <li class="" id="more-tab"><a class="tabs" href="#more-tab-pane">Hints and comments</a></li>
 </ul>
 {{/isStudentQuestion}}
+
 <form name="contentpiece-settings">
     <div class="tab-content ">
         <div class="tab-pane active" id="settings-tab-pane">
+
             <div class="row m-b-15">
                 <div class="col-sm-4">
-                    <label class="form-label">Textbook</label>
+                    <label class="form-label">Textbook<span class="text-error">*</span></label>
                     <select required name="term_ids[textbook]" id="subs" class="form-control select2" >
                         <option value="">--select textbook--</option>
                         {{#textbooksFilter}}
@@ -18,7 +32,7 @@
                     </select>
                 </div>
                 <div class="col-sm-4">
-                    <label class="form-label">Chapter <span class="muted small pull-right"> Select a Subject first</span></label>
+                    <label class="form-label">Chapter<span class="text-error">*</span><span class="muted small pull-right"> Select a Subject first</span></label>
                     <select required name="term_ids[chapter]" id="chaps" class="form-control select2" >
                     </select>
                 </div>
@@ -39,7 +53,7 @@
                     </select>
                 </div>
                 <div class="col-sm-4">
-                    <label class="form-label">Time</label>
+                    <label class="form-label">Time<span class="text-error">*</span></label>
                     <div class="row">
                         <!--
                         <div class="col-sm-6">
@@ -53,7 +67,7 @@
             </div>
             <div class="row m-b-15">
                 <div class="col-sm-4" id="question_type_column">
-                    <label class="form-label">Question Type</label>
+                    <label class="form-label">Question Type<span class="text-error">*</span></label>
                     <select required name="question_type" id="qType" class="form-control select2" >
                         <option value="">--select question type--</option>
                         <option value="chorus">Chorus</option>
@@ -63,7 +77,7 @@
                 </div>
                 {{#isStudentQuestion}}
                 <div class="col-sm-4" id="difficulty_level_column">
-                    <label class="form-label">Difficulty Level</label>
+                    <label class="form-label">Difficulty Level<span class="text-error">*</span></label>
                     <select required name="difficulty_level" id="difficulty_level" class="form-control select2" >
                         <option value="">--select Difficulty Level--</option>
                         <option value="1">Level 1</option>
