--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <label class="form-label">Status</label>
-                <select required name="post_status" id="status" class="form-control select2" >
+                <select required name="post_status" id="status" class="form-control" >
                     <option value="underreview">Under Review</option>
                     <option value="publish">Published</option>
                     <option value="archive">Archived</option>
