--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
@@ -187,7 +187,7 @@
             <div class="col-md-4">
                 <div class="margin-bottom-20 ">
                     <label class="form-label">Total No. of Questions</label>
-                    <input id=""  class="disabled" placeholder="0" type="text" disabled="disabled">
+                    <input id="total-question-number"  class="disabled" placeholder="0" type="text" disabled="disabled">
                 </div>
             </div>
         </div>
