--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -21,15 +21,15 @@
     
     <div class="grid-body" style="overflow: hidden; display: block;">
         <div class="row m-b-10">
-            <div class="col-md-3 b-r b-grey">
+            <div class="col-md-3">
                     <label class="form-label">No. of Questions</label>
-                    10
+                    {{getQuestionsCount}}
             </div>
             <div class="col-md-3 b-r b-grey">
                     <label class="form-label">Duration</label>
                     {{total_minutes}} mins
             </div>
-            <div class="col-md-3 b-r b-grey">
+            <div class="col-md-3">
                     <label class="form-label">Marks</label>
                     {{marks}}
             </div>
