quiz permissions: single_attempt, allow_hint, allow_resubmit handled time for each question question status shown on quiz summary

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -27,7 +27,7 @@
         </div>
 	</div>
     {{#responseStatus}}
-    <div class="qstnStatus p-t-10"><i class="fa fa-check-circle"></i> Completed
+    <div class="qstnStatus {{statusUI.divClass}} p-t-10"><i class="fa  {{statusUI.icon}}"></i>  {{statusUI.text}}
         <div>
             <label class="form-label small-text text-grey inline">Time Taken: <span class="bold">{{timeTaken}}</span></label></div>
     </div>
