display_answer permission handled

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -11,25 +11,21 @@
 		<div class="clearfix"></div>
         <div class="tiles grey p-t-10 p-b-10 p-l-20">
             <div class="muted">
-                <span class="bold question-type-div">Question Type:</span> <span class="question-type-div"> {{question_type}},</span>
-                <span class="bold">Date Completed:</span> {{dateCompleted}}
-
-                {{#responseStatus}}
+                <span class="bold question-type-div">Difficulty Level:</span> <span class="question-type-div"> {{difficulty_level}}</span>
+                {{#display_answer}}
                 <div id="correct-answer-div">
-                    <span class="bold">Correct Answer:</span> {{correctAnswer}}
+                    <span class="bold">Marks Obtained:</span> {{marks_obtained}}/{{total_marks}}
                 </div>
-                <div>
-                    <span class="bold">Taken By:</span> {{teacherName}}
-                </div>
-                {{/responseStatus}}
+                {{/display_answer}}
             </div>
             <div class="clearfix"></div>
         </div>
 	</div>
     {{#responseStatus}}
-    <div class="qstnStatus {{statusUI.divClass}} p-t-10"><i class="fa  {{statusUI.icon}}"></i>  {{statusUI.text}}
-        <div>
-            <label class="form-label small-text text-grey inline">Time Taken: <span class="bold">{{timeTaken}}</span></label></div>
-    </div>
+        <div class="qstnStatus {{statusUI.divClass}} p-t-10">
+            {{#display_answer}}<i class="fa  {{statusUI.icon}}"></i>  {{statusUI.text}}{{/display_answer}}
+            <div>
+                <label class="form-label small-text text-grey inline">Time Taken: <span class="bold">{{timeTaken}}</span></label></div>
+        </div>
     {{/responseStatus}}
 </div>
