--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
@@ -1,6 +1,11 @@
 <form name="content-collection-form" id="content-collection-form">
-	<div class="grid-title"><h3>{{heading}} <span class="semi-bold">{{type}}</span></h3>
+	<div class="grid-title"><h3 class="m-t-0">{{heading}} <span class="semi-bold">{{type}}</span>
+        {{#isQuiz}}<br>
+        <small>Pick individual or add a set of student questions for students to take in the quiz</small>
+        {{/isQuiz}}
+    </h3>
 	</div>
+
     {{#isModule}}
 	<div class="grid-body" style="overflow: hidden; display: block;">
 		<div class="row m-b-10">
@@ -10,7 +15,7 @@
 		</div>
 		<div class="row m-b-10">
 			<div class="col-md-6">
-				<label class="form-label">Objective</label>
+				<label class="form-label">Objective<span class="text-error">*</span></label>
 				<textarea id="objective" name="description[objective]" required="required" class="form-control" placeholder="Enter Objective">{{description.objective}}</textarea>
 			</div>
 			<div class="col-md-6">
@@ -30,7 +35,7 @@
 		</div>
 		<div class="row m-b-10">
 			<div class="col-md-6">
-				<label required="required" class="form-label">Textbook</label>
+				<label required="required" class="form-label">Textbook<span class="text-error">*</span></label>
 				<select name="term_ids[textbook]" id="textbooks" class="form-control select2" >
 					<option value="">--select textbook--</option>
 	                {{#textbooksFilter}}
@@ -79,41 +84,32 @@
 
 
         {{#isQuiz}}
-        <div class="grid-body no-border" style="overflow: hidden; display: block;">
-        <div class="row">
+        <div class="grid-body" style="overflow: hidden; display: block;">
+        <div class="row m-b-10">
             <div class="col-md-6">
                 <input name="name" type="text" class="input-lg" placeholder="Quiz Name" required="required">
             </div>
         </div>
-        <div class="row ">
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Quiz Type</label>
-                    <select name="quiz_type" id="qType" class="form-control">
-                        <option value="practice">Practice</option>
-                        <option value="test">Class Test</option>
-                    </select>
-                </div>
+        <div class="row m-b-10">
+            <div class="col-md-6">
+                <label class="form-label">Quiz Type</label>
+                <select name="quiz_type" id="qType" class="form-control">
+                    <option value="practice">Practice</option>
+                    <option value="test">Class Test</option>
+                </select>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Status</label>
-                    <select name="post_status" id="status" class="form-control">
-                        <option value="underreview">Under Review</option>
-                        <option value="publish">Published</option>
-                        <option value="archive">Archived</option>
-                    </select>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-
-                </div>
+            <div class="col-md-6">
+                <label class="form-label">Status</label>
+                <select name="post_status" id="status" class="form-control">
+                    <option value="underreview">Under Review</option>
+                    <option value="publish">Published</option>
+                    <option value="archive">Archived</option>
+                </select>
             </div>
         </div>
         <div class="row m-b-10">
             <div class="col-md-6">
-                <label required="required" class="form-label">Textbook</label>
+                <label required="required" class="form-label">Textbook<span class="text-error">*</span></label>
                 <select name="term_ids[textbook]" id="textbooks" class="form-control select2" >
                     <option value="">--select textbook--</option>
                     {{#textbooksFilter}}
@@ -140,66 +136,54 @@
                 </select>
             </div>
         </div>
-        <div class="row ">
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Marks</label>
-                    <input id="" name="marks" class="pull-left" placeholder="Enter Marks" type="text" required="required"/>
-                </div>
+        <div class="row m-b-10">
+            <div class="col-md-6">
+                <label class="form-label">Marks<span class="text-error">*</span></label>
+                <input id="" name="marks" class="pull-left" placeholder="Enter Marks" type="text" required="required"/>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Duration</label>
-                    <input id="" name="duration" class="pull-left" placeholder="Enter Duration" type="text"
-                           required="required"/> &nbsp;{{minshours}}
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Negative Marks</label>
-
-                    <div class="radio radio-info inline">
-                        <input id="yes" type="radio" name="negMarksEnable" value="true" checked="checked">
-                        <label for="yes">Yes</label>
-                        <input id="no" type="radio" name="negMarksEnable" value="false">
-                        <label for="no">No</label>
-                    </div>
-                    <div id="negPercent" class="input-with-icon right inline">
-                        <input id="" name="negMarks" class="inline" placeholder="Set Negative marks" type="text" /> %
-                    </div>
-                </div>
+            <div class="col-md-6">
+                <label class="form-label">Total Marks</label>
+                <input id="" class="disabled" placeholder="0" type="text" disabled="disabled">
             </div>
         </div>
-        <div class="row ">
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Total Marks</label>
-                    <input id="" class="disabled" placeholder="0" type="text" disabled="disabled">
-                </div>
+        <div class="row m-b-10">
+            <div class="col-md-6">
+                <label class="form-label">Duration<span class="text-error">*</span></label>
+                <input id="" name="duration" class="pull-left" placeholder="Enter Duration" type="text"
+                       required="required"/> &nbsp;{{minshours}}
+                <div class="clearfix"></div>
             </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Total Time </label>
-                    <input id=""  class="disabled" placeholder="0" type="text" disabled="disabled">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Total No. of Questions</label>
-                    <input id="total-question-number"  class="disabled" placeholder="0" type="text" disabled="disabled">
-                </div>
+            <div class="col-md-6">
+                <label class="form-label">Total Time </label>
+                <input id=""  class="disabled" placeholder="0" type="text" disabled="disabled">
             </div>
         </div>
-        <div class="row ">
+        <div class="row m-b-10">
+            <div class="col-md-6">
+                <label class="form-label">Negative Marks</label>
+                <div class="radio radio-info inline">
+                    <input id="yes" type="radio" name="negMarksEnable" value="true" checked="checked">
+                    <label for="yes">Yes</label>
+                    <input id="no" type="radio" name="negMarksEnable" value="false">
+                    <label for="no">No</label>
+                </div>
+                <div id="negPercent" class="input-with-icon right inline">
+                    <input id="" name="negMarks" class="inline" placeholder="Set Negative marks" type="text" /> %
+                </div>
+            </div>
+            
+            <div class="col-md-6">
+                <label class="form-label">Total No. of Questions</label>
+                <input id="total-question-number"  class="disabled" placeholder="0" type="text" disabled="disabled">
+            </div>
+        </div>
+        <div class="row m-b-10">
             <div class="col-md-12">
-                <div class="margin-bottom-20 ">
-                    <label class="form-label">Quiz Instructions</label>
-                    <input id="" name="description[instruction]" class="form-control" placeholder="Rich Text Editor will come here" type="text">
-                </div>
+                <label class="form-label">Quiz Instructions</label>
+                <input id="" name="description[instruction]" class="w100" placeholder="Enter Quiz instructions here" type="text">
             </div>
         </div>
-        <div class="row">
+        <div class="row m-b-10">
             <div class="col-md-12">
                 <div data-toggle="collapse" id="accordion" class="panel-group">
                     <div class="panel panel-default">
