--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -45,7 +45,12 @@
         <div class="row">
             <div class="col-sm-12">
                 <h5 class="bold">Quiz Instructions</h5>
-                {{#description}}{{&instruction}}{{/description}}
+                {{#description}}
+                    {{&instruction}}
+                    {{^instruction}}
+                        This quiz has no instructions
+                    {{/instruction}}
+                {{/description}}
             </div>
         </div>
         
