AudioCues on toggle button

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -44,6 +44,20 @@
 						<li><a href="#sync"><span class="fa fa-refresh"></span>&nbsp;&nbsp;Sync</a></li>
 						<li class="divider"></li>                
 						<li><a id="user_logout" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;Log Out</a></li>
+						<li class="divider"></li>
+						<li>&nbsp;&nbsp;Audio Cues
+						<a id="audioCues" href="javascript://">
+							<div class="onoffswitch h-align-middle">
+							  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="onOffSwitchToggle">
+							  <label class="onoffswitch-label" for="onOffSwitchToggle">
+							      <span class="onoffswitch-inner">
+							          <span class="onoffswitch-active"><span class="onoffswitch-switch">On</span></span>
+							          <span class="onoffswitch-inactive"><span class="onoffswitch-switch">Off</span></span>
+							      </span>
+							  </label>
+							</div>
+						</a>
+						</li>
 					</ul>
 				</li>
 			</ul>
