--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-selection/templates/content-selection.html
@@ -9,8 +9,14 @@
                 </div>
                 </th>
                 <th>Question</th>
+                {{#isModule}}
                 <th>Content Type</th>
                 <th>Present in training module</th>
+                {{/isModule}}
+                {{#isQuiz}}
+                <th>Level</th>
+                <th>Present in Quiz</th>
+                {{/isQuiz}}
                 <th>Last Modified</th>
             </tr>
             </thead>
