quiz-in-progress: continue mode

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -38,9 +38,9 @@
             <div class="col-md-3">
                     <label class="form-label">Marks</label>
                     {{marks}}
-                    {{#responseSummary}} 
+                    {{#display_marks}} 
                         <h4 class="text-success semi-bold no-margin inline">(You scored: <span class="bold">{{total_marks_scored}}</span>)</h4>
-                    {{/responseSummary}}
+                    {{/display_marks}}
             </div>
             <div class="col-md-3">
                     {{#responseSummary}} 
