table element create and view

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
@@ -90,6 +90,13 @@
                 <div class="aj-imp-builder-title">Image With Text</div>
             </a>
         </li>
+        <li data-element="Table" class="hotspotable">
+            <a  class="drag builder-element">
+                <i class="bicon icon-uniF166"></i>
+
+                <div class="aj-imp-builder-title">Table</div>
+            </a>
+        </li>
         <li data-element="Video" class="hotspotable">
             <a class="drag builder-element">
                 <i class="bicon icon-uniF11E"></i>
