quiz practice mode

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -1,3 +1,10 @@
+{{#practice_mode}}
+    <div class="well text-center">
+        <h4><span class="bold">This is a practise quiz.
+            It is designed to help you train for the class tests.</span></h4>
+    </div>
+{{/practice_mode}}
+
 <div class="tiles white m-b-20">
 	<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
 		<div class="row">
