--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -1,3 +1,10 @@
+{{#practice_mode}}
+    <div class="well text-center">
+        <h4><span class="bold">This is a practise quiz.
+            It is designed to help you train for the class tests.</span></h4>
+    </div>
+{{/practice_mode}}
+
 <div class="tiles white grid simple animated fadeIn'">
     <div class="grid-title">
         <div class="row">
