--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -10,6 +10,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h3 class="no-margin semi-bold">
+                    <label class="form-label text-grey">Quiz Name</label>
                     {{name}} 
                     {{#responseSummary}} 
                         <span class="small text-success semi-bold no-margin inline">(Taken On: {{taken_on_date}})</span>
@@ -69,12 +70,10 @@
         <div class="row">
             <div class="col-sm-12">
                 <h5 class="bold">Quiz Instructions</h5>
-                {{#description}}
-                    {{&instruction}}
-                    {{^instruction}}
+                    {{&instructions}}
+                    {{^instructions}}
                         This quiz has no instructions
-                    {{/instruction}}
-                {{/description}}
+                    {{/instructions}}
             </div>
         </div>
         
