image-edit-initial

--- a/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
@@ -9,11 +9,11 @@
 
   <div id="all-media-region" class="tab-pane active">
     <div id="grid-region" class="col-md-9"></div>
-    <div id="edit-media-region" class="col-md-3">
+    <!-- <div id="edit-media-region" class="col-md-3">
       <div class="pick-image p-t-50">
         <h4><span class="glyphicon glyphicon-hand-left"></span>Select an item from the library</h4>
       </div>
-    </div>
+    </div> -->
   </div>
   <div id="upload-region" class="tab-pane "></div>
   <div id="gallery-region" class="tab-pane"></div>
