--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/layout-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/layout-tpl.html
@@ -23,5 +23,5 @@
         <h1 class="semi-bold muted"><span class="fa fa-search"></span></h1>
     </div>
     <div id="selectable-images"></div>
-    <div id="no-results-div"></div>
+    <div id="edit-image-view"></div>
 </div>
