--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
@@ -7,6 +7,12 @@
             <span class="glyphicon glyphicon-minus"></span>
         </div>
     </a>
+    <div class="edit-image clearfix">
+    <span class="glyphicon glyphicon-edit edit"></span> Edit
+    </div>
+    <div class="delete-media-img">
+       <span class="glyphicon glyphicon-trash delete"></span> Delete
+    </div>
 {{/imagePreview}}
 {{#videoPreview}}
 <a class="thumbnail">
