--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -112,13 +112,28 @@
 			}
 			&.skip{
 				a{
+					background: @color-warning;
+					color: @color-white;
+					&:hover{
+						background: darken(@color-warning, 10%);
+					}
+					&:before{
+						content: "\f051";
+						bottom: 6px;
+						right: 8px;
+						font-size: 18px;
+					}
+				}
+			}
+			&.partiallyCorrect{
+				a{
 					background: @color-info;
 					color: @color-white;
 					&:hover{
 						background: darken(@color-info, 10%);
 					}
 					&:before{
-						content: "\f021";
+						content: "\f046";
 						bottom: 6px;
 						right: 8px;
 						font-size: 18px;
