--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2090,14 +2090,27 @@ input#duration {
   right: 6px;
 }
 .quizSteps ul li.skip a {
-  background: #0090d9;
+  background: #fdd01c;
   color: #ffffff;
 }
 .quizSteps ul li.skip a:hover {
-  background: #006ea6;
+  background: #e4b702;
 }
 .quizSteps ul li.skip a:before {
-  content: "\f021";
+  content: "\f051";
+  bottom: 6px;
+  right: 8px;
+  font-size: 18px;
+}
+.quizSteps ul li.partiallyCorrect a {
+  background: #0090d9;
+  color: #ffffff;
+}
+.quizSteps ul li.partiallyCorrect a:hover {
+  background: #006ea6;
+}
+.quizSteps ul li.partiallyCorrect a:before {
+  content: "\f046";
   bottom: 6px;
   right: 8px;
   font-size: 18px;
