css for student textbooks

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -17,6 +17,7 @@
 @import "module.less";
 @import "quiz.less";
 @import "teacher.less";
+@import "student.less";
 
 body{
 	background-color: @body-bg;
