--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
@@ -12,6 +12,12 @@
 			<span class="sort anim150 desc" data-sort="data-subjects" data-order="asc"></span>
 		</div>
 
+		{{#take_quiz}}
+			<div class="meta modules">
+			    Total Chapters
+			</div>
+		{{/take_quiz}}
+
 		<div class="meta rec">Status
 			<span class="sort anim150 asc" data-sort="data-modules" data-order="desc"></span>
 			<span class="sort anim150 desc" data-sort="data-modules" data-order="asc"></span>
