--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="meta area">
-    <p>{{subject_string}}</p>
+    <p>{{subjects}}</p>
   </div>
 
   <div class="meta area">
