table element properties css

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -4,6 +4,7 @@
 @import "fonts.less";
 @import "builder.less";
 //@import "mashmenu.less";
+@import "table.less";
 @import "checkbox.less";
 @import "fib.less";
 @import "mcq.less";
