--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -936,6 +936,11 @@
 #slides-info {
   font-size: 16px;
 }
+input[type="text"].rowColInput {
+  width: 30%;
+  float: left;
+  margin-right: 15px;
+}
 /*input[type=checkbox].mcq-option-select {
 	display:none;
 }
