login For Student

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -15,8 +15,9 @@
 
 			<ul style="display:none" id="mobile-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
 				<li class="dropdown">
-					<a class="btn btn-small btn-primary" href="#teachers/dashboard" id="main-menu-toggle"><span class="small-text">Dashboard</span>
-					</a>
+					<!--done for time being-->
+					<!-- <a class="btn btn-small btn-primary" href="#teachers/dashboard" id="main-menu-toggle"><span class="small-text">Dashboard</span>
+					</a> -->
 				</li>		 
 			</ul>
 
@@ -41,11 +42,11 @@
 						<span class="fa fa-gears"></span>	
 					</a>
 					<ul aria-labelledby="user-options" role="menu" class="dropdown-menu pull-right">
-						<li><a href="#sync"><span class="fa fa-refresh"></span>&nbsp;&nbsp;Sync</a></li>
-						<li class="divider"></li>                
+	<!-- 					<li><a href="#sync"><span class="fa fa-refresh"></span>&nbsp;&nbsp;Sync</a></li>
+						<li class="divider"></li>  -->               
 						<li><a id="user_logout" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;Log Out</a></li>
 						<li class="divider"></li>
-						<li>&nbsp;&nbsp;Audio Cues
+<!-- 						<li>&nbsp;&nbsp;Audio Cues
 						<a id="audioCues" href="javascript://">
 							<div class="onoffswitch h-align-middle">
 							  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="onOffSwitchToggle">
@@ -57,7 +58,7 @@
 							  </label>
 							</div>
 						</a>
-						</li>
+						</li> -->
 					</ul>
 				</li>
 			</ul>
