setting of total marks & total time for questions. display of marks and duration for each question in quiz creation

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/module-description/templates/collection-details.html
@@ -143,19 +143,19 @@
             </div>
             <div class="col-md-6">
                 <label class="form-label">Total Marks</label>
-                <input id="" class="disabled" placeholder="0" type="text" disabled="disabled">
+                <input id="total-marks" class="disabled" placeholder="0" type="text" disabled="disabled">
             </div>
         </div>
         <div class="row m-b-10">
             <div class="col-md-6">
                 <label class="form-label">Duration<span class="text-error">*</span></label>
-                <input id="" name="duration" class="pull-left" placeholder="Enter Duration" type="text"
+                <input name="duration" class="pull-left" placeholder="Enter Duration" type="text"
                        required="required"/> &nbsp;{{minshours}}
                 <div class="clearfix"></div>
             </div>
             <div class="col-md-6">
                 <label class="form-label">Total Time </label>
-                <input id=""  class="disabled" placeholder="0" type="text" disabled="disabled">
+                <input id="total-time"  class="disabled" placeholder="0" type="text" disabled="disabled">
             </div>
         </div>
         <div class="row m-b-10">
@@ -317,35 +317,6 @@
                                     <div class="col-sm-3">
                                     </div>
                                 </div>
-
-                                <!--<div class="modal fade" id="msgModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"-->
-                                <!--aria-hidden="true" style="display: none;">-->
-                                <!--<div class="modal-dialog">-->
-                                <!--<div class="modal-content">-->
-                                <!--<div class="modal-header">-->
-                                <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×-->
-                                <!--</button>-->
-                                <!--<h4 id="" class="semi-bold text-white">Edit Message</h4>-->
-                                <!--</div>-->
-                                <!--<div class="modal-body">-->
-                                <!--<div class="row form-row">-->
-                                <!--<div class="col-md-12">-->
-                                <!--<input type="text" class="form-control"-->
-                                <!--placeholder="Rich Text Editor will come here">-->
-                                <!--</div>-->
-                                <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="modal-footer">-->
-                                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close-->
-                                <!--</button>-->
-                                <!--<button type="button" class="btn btn-success">Save changes</button>-->
-                                <!--</div>-->
-                                <!--</div>-->
-                                <!--&lt;!&ndash; /.modal-content &ndash;&gt;-->
-                                <!--</div>-->
-                                <!--&lt;!&ndash; /.modal-dialog &ndash;&gt;-->
-                                <!--</div>-->
-
                             </div>
                         </div>
                     </div>
