--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/quiz-description/templates/quiz-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/edit-quiz/quiz-description/templates/quiz-details.html
@@ -104,13 +104,13 @@
     <div class="col-md-4">
         <div class="margin-bottom-20 ">
             <label class="form-label">Total Marks</label>
-            <input id="" class="disabled" placeholder="0" type="text" disabled="disabled">
+            <input id="total-marks" class="disabled" placeholder="0" type="text" disabled="disabled">
         </div>
     </div>
     <div class="col-md-4">
         <div class="margin-bottom-20 ">
             <label class="form-label">Total Time </label>
-            <input id=""  class="disabled" placeholder="0" type="text" disabled="disabled">
+            <input id="total-time"  class="disabled" placeholder="0" type="text" disabled="disabled">
         </div>
     </div>
     <div class="col-md-4">
