--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-selection/templates/content-selection.html
@@ -15,6 +15,8 @@
                 {{/isModule}}
                 {{#isQuiz}}
                 <th>Level</th>
+                <th>Marks</th>
+                <th>Time</th>
                 <th>Present in Quiz</th>
                 {{/isQuiz}}
                 <th>Last Modified</th>
