--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/edit-module/content-display/templates/content-display.html
@@ -11,7 +11,7 @@
         </div>
         <div class="clearfix"></div>
         <div class="tiles grey p-t-10 p-b-10 p-l-20">           
-            <div class="muted">{{#isModule}}{{post_tags}}{{/isModule}},
+            <div class="muted">{{#isModule}}{{post_tags}},{{/isModule}}
                 {{#isQuiz}}
                     Level {{difficulty_level}},
                     Marks: {{marks}},
